[gd_scene load_steps=25 format=2]

[ext_resource path="res://images/motopulpo.png" type="Texture" id=1]
[ext_resource path="res://scripts/pulpo_motosierra.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 80.4329

[sub_resource type="Animation" id=2]
resource_name = "andando"
length = 0.06
loop = true
step = 0.015
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "cabeza_creciendo"
length = 0.13
step = 0.015
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "cabeza_creciendo_reversa"
step = 0.015
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "muriendo"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "andando"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "cabeza_creciendo"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "cabeza_creciendo_reversa"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "cabeza_motosierra"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "muriendo"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachine" id=19]
states/andando/node = SubResource( 7 )
states/andando/position = Vector2( 387, 72 )
states/cabeza_creciendo/node = SubResource( 8 )
states/cabeza_creciendo/position = Vector2( 600, 156 )
states/cabeza_creciendo_reversa/node = SubResource( 9 )
states/cabeza_creciendo_reversa/position = Vector2( 677, 72 )
states/cabeza_motosierra/node = SubResource( 10 )
states/cabeza_motosierra/position = Vector2( 431, 260 )
states/muriendo/node = SubResource( 11 )
states/muriendo/position = Vector2( 195, 161 )
transitions = [ "andando", "muriendo", SubResource( 12 ), "cabeza_motosierra", "muriendo", SubResource( 13 ), "cabeza_creciendo", "muriendo", SubResource( 14 ), "andando", "cabeza_creciendo", SubResource( 15 ), "cabeza_creciendo", "cabeza_motosierra", SubResource( 16 ), "cabeza_creciendo", "cabeza_creciendo_reversa", SubResource( 17 ), "cabeza_creciendo_reversa", "andando", SubResource( 18 ) ]
start_node = "andando"

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 10, 48.4849 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 10, 50.1672 )

[node name="pulpo_motosierra" type="KinematicBody2D" groups=[
"Cthulu",
"ret",
]]
scale = Vector2( 0.9, 1 )
z_index = 2
script = ExtResource( 13 )
velocidad = 150

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.56763, 41.6223 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0529476, 12.0488 )
scale = Vector2( 1.19555, 1.04 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.80301, -147.998 )

[node name="cambio_direccion" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="iman" type="RayCast2D" parent="."]
position = Vector2( -60.7678, 130.416 )
rotation = -1.56918
scale = Vector2( 7.42932, 2.06212 )
enabled = true
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/andando = SubResource( 2 )
anims/cabeza_creciendo = SubResource( 3 )
anims/cabeza_creciendo_reversa = SubResource( 4 )
anims/cabeza_motosierra = SubResource( 5 )
anims/muriendo = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )

[node name="retencion1" type="CollisionShape2D" parent="." groups=[
"ret",
]]
position = Vector2( 71.9433, 130.339 )
shape = SubResource( 21 )
disabled = true

[node name="retencion2" type="CollisionShape2D" parent="." groups=[
"ret",
]]
position = Vector2( -77.5493, 127.817 )
shape = SubResource( 22 )
disabled = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="cambio_direccion" to="." method="_on_cambio_direccion_timeout"]
